--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Oasis Hotel</title>
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css" />
     <script src="bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </head>
